<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:label="@string/crear_publicaci_n"
        tools:context=".InterfazNuevaPublicacion" android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:adjustViewBounds="true"
        android:background="#858585"
        android:backgroundTint="#939393"
        android:backgroundTintMode="multiply"
        android:contentDescription="@string/imagen_del_producto"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
            android:text="@string/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#4CAF50"
            app:cornerRadius="30dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="siguienteActivity" app:layout_constraintTop_toBottomOf="@+id/switch1"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="185dp"
        android:ems="10"
        android:hint="@string/nombre_del_producto"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:maxLines="1"
        android:minHeight="48dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <EditText
            android:hint="@string/descripci_n_del_producto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="text"
            android:ems="10"
            android:maxLength="280"
            android:singleLine="true"
            android:id="@+id/editTextTextPersonName2"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="22dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/precio_del_producto"
        android:inputType="number"
        android:longClickable="false"
        android:maxLength="6"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/cantidad_del_producto"
        android:inputType="number"
        android:longClickable="false"
        android:maxLength="3"
        android:singleLine="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#4CAF50"
        app:cornerRadius="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2" />
    <Button
            android:text="@string/cargar_imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            android:onClick="solicitarImagen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.473"/>
    <TextView
            android:text="@string/nombre_del_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"/>
    <TextView
            android:text="@string/descripci_n_del_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/editTextNumber"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="174dp"/>
    <TextView
            android:text="@string/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
            android:layout_marginTop="4dp" android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"/>
    <TextView
            android:text="@string/precio_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/switch1"
            android:layout_marginStart="4dp" android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/switch1"/>
</androidx.constraintlayout.widget.ConstraintLayout>